unpackaged/main/default/objects/ET_KPI_Request__c/ET_KPI_Request__c.object-meta.xml
<CustomObject>
    <label>KPI Request</label>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>KPI  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>