unpackaged/main/default/objects/ET_KPI_Request__c/fields/ET_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ET_Service_Request__c</referenceTo>
    <relationshipLabel>KPI Requests</relationshipLabel>
    <relationshipName>KPI_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>