unpackaged/main/default/objects/ET_KPI_Request__c/fields/ET_Status__c.field-meta.xml
<CustomField>
    <fullName>ET_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>