unpackaged/main/default/objects/ET_KPI_Request__c/fields/ET_Status_Ended_by_User__c.field-meta.xml
<CustomField>
    <fullName>ET_Status_Ended_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status Ended by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPI_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>