unpackaged/main/default/objects/ET_KPI_Request__c/fields/ET_Status_Started_At__c.field-meta.xml
<CustomField>
    <fullName>ET_Status_Started_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Started At</label>
    <type>DateTime</type>
</CustomField>