unpackaged/main/default/objects/ET_KPI_Request__c/fields/ET_Status_Started_by_User__c.field-meta.xml
<CustomField>
    <fullName>ET_Status_Started_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status Started by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPI_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>