unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_Current_Fare__c.field-meta.xml
<CustomField>
    <fullName>ETST_Current_Fare__c</fullName>
    <label>Current Fare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>