unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_Current_Pickup_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Current_Pickup_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Pickup End Date</label>
    <type>Date</type>
</CustomField>