unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_End_Date_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>ETST_End_Date_Updated_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date Updated On</label>
    <type>DateTime</type>
</CustomField>