unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_Fare_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>ETST_Fare_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPI_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>