unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_Pickup_Start_Date_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>ETST_Pickup_Start_Date_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Start Date Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPI_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>