unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_Previous_DropOff__c.field-meta.xml
<CustomField>
    <fullName>ETST_Previous_DropOff__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous DropOff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>