unpackaged/main/default/objects/ET_KPI_Request__c/fields/ETST_Previous_Pickup_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Previous_Pickup_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Pickup Start Date</label>
    <type>Date</type>
</CustomField>