unpackaged/main/default/objects/ET_KPI_Request__c/fields/new_status_date__c.field-meta.xml
<CustomField>
    <fullName>new_status_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>new status date</label>
    <type>DateTime</type>
</CustomField>